--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,10 @@
 <resources>
     <string name="app_name">AgoraVideoFUKotlin</string>
-    <string name="app_id">APP_ID</string>
+    <string name="app_id">85a5102fa13341f4bb06be1a0e109080</string>
+
+    <!-- preview -->
+    <string name="btn_switch_camera">Switch Camera</string>
+    <string name="btn_pause_capture">Pause</string>
+    <string name="btn_resume_capture">Resume</string>
+    <string name="btn_stop_capture">Stop</string>
 </resources>
