--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,8 +4,7 @@
 
     <!-- preview -->
     <string name="btn_switch_camera">Switch</string>
-    <string name="btn_pause_capture">Pause</string>
-    <string name="btn_resume_capture">Resume</string>
+    <string name="btn_close">Close</string>
     <string name="btn_rotate">Rotate</string>
     <string name="btn_scaling">Scale</string>
 </resources>
