--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">AgoraVideoFUKotlin</string>
+    <string name="app_name">CameraKotlin</string>
     <string name="app_id">85a5102fa13341f4bb06be1a0e109080</string>
 
     <!-- preview -->
